--- a/Frontend/Core/Components/Layout/NavMenu.razor
+++ b/Frontend/Core/Components/Layout/NavMenu.razor
@@ -52,6 +52,11 @@
 					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logowanie - test
 				</NavLink>
 			</div>
+			<div class="nav-item px-3">
+				<NavLink class="nav-link" href="map">
+					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logowanie - test
+				</NavLink>
+			</div>
 		}
 	</nav>
 </div>
